commencement de la page du club

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="CSS/header.css"> 
     <link rel="stylesheet" href="index.css"> 
     <link rel="stylesheet" href="CSS/information.css"> 
+    <link rel="stylesheet" href="CSS/club.css">
 </head>
 <body>
     <!-- Le header -->
@@ -26,13 +27,13 @@
             <!-- Les 3 pages du header -->
             <ul id="menu">
                 <li>
-                    <a href="#">Accueil</a>
+                    <a href="index.html">Accueil</a>
                 </li>
                 <li>
                     <a href="informations.html">Informations</a>
                 </li>
                 <li>
-                    <a href="#">Club</a>
+                    <a href="club.html">Club</a>
                 </li>
             </ul>
         </nav>
@@ -43,7 +44,7 @@
 
         <!-- Les 3 images de la couverture du haut -->
         <div class="Image_accueil1">
-             <img class="couverture1" src="img/Horizontale/Sam_Saut_surverticale.jpg" alt="Sam en saut sur un vertical avec Amélie dessus dans la carrière en herbe"/>
+            <img class="couverture1" src="img/Horizontale/Sam_Saut_surverticale.jpg" alt="Sam en saut sur un vertical avec Amélie dessus dans la carrière en herbe"/>
             <img class="couverture2" src="img/Horizontale/Ecume_concours_caresse.jpg" alt="Ecume en concours à Marcheprime avec Amélie dessus entrain de le caresser"/>
             <img class="couverture3" src="img/Horizontale/Sam_Saut_oxer.jpg" alt="Sam en saut sur un oxer avec Amélie dessus dans la carrière en herbe"/>
         </div>
@@ -56,7 +57,7 @@
             <img class="couverture4" src="img/Horizontale/Sam_dressage.jpg" alt="Sam en dressage avec Amélie dessus "/>
             <img class="couverture5"src="img/Horizontale/Ecume_plat.jpg" alt="Ecume en plat avec Amélie dessus dans la grande carrière en sable"/>
             <img class="couverture6"src="img/Horizontale/Ecume_shooting_moi.jpg" alt="Ecume en mode beau gosse avec Amélie dessus dans la carrière en herbe"/>
-         </div>
+        </div>
 
     </section>
         <!-- Section présentation du club -->
@@ -112,7 +113,7 @@
 
 
 
- <!-- Section du club  -->
+<!-- Section du club  -->
 
     </section>
 
@@ -145,7 +146,7 @@
 
         <div class="text-discipline">
             <p>Que vous soyez cavalier de loisir ou un compétiteur dans l’âme, le pas du marquis sera à votre écoute.
-                 Du dressage, au CSO en passant par quelques sorties en extérieur ainsi que des initiations au travail à pied et à de véritables parties de jeux à poneys, 
+                Du dressage, au CSO en passant par quelques sorties en extérieur ainsi que des initiations au travail à pied et à de véritables parties de jeux à poneys, 
                 le pas du marquis sera vous séduire.
             </p>
         </div>
@@ -153,7 +154,7 @@
 
             <a href="#">
                 <input class="voir-plus" type="button" value=" Voir plus "/>
-             </a>
+            </a>
         </div>
     </section>
 
@@ -173,7 +174,7 @@
         </div>
     </section>
 
-  
+
 </body>
 
 </html>
