--- a/informations.html
+++ b/informations.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="CSS/header.css"> 
     <link rel="stylesheet" href="index.css"> 
     <link rel="stylesheet" href="CSS/information.css"> 
+    <link rel="stylesheet" href="CSS/club.css">
 </head>
 <body>
     <!-- Le header -->
@@ -29,10 +30,10 @@
                     <a href="index.html">Accueil</a>
                 </li>
                 <li>
-                    <a href="#">Informations</a>
+                    <a href="informations.html">Informations</a>
                 </li>
                 <li>
-                    <a href="#">Club</a>
+                    <a href="club.html">Club</a>
                 </li>
             </ul>
         </nav>
