position des 3 premier poneys

--- a/club.html
+++ b/club.html
@@ -89,6 +89,29 @@
     <div >
         <h2>Présentation des poneys du club</h2>
     </div>
-    
+
+    <div class="imgEcume">
+        <img src="img/Verticale/Ecume_portrait.jpg" alt="Portrait Ecume">
+
+    </div>
+    <div class="text-Ecume">
+        <p>Ecume</p>
+    </div>
+
+    <div class="imgAnecdote">
+        <img src="img/Verticale/Ecume_portrait.jpg" alt="Portrait Anecdote">
+
+    </div>
+    <div class="text-Anecdote">
+        <p>Anecdote</p>
+    </div>
+
+    <div class="imgAubade">
+        <img src="img/Verticale/Ecume_portrait.jpg" alt="Portrait Aubade">
+
+    </div>
+    <div class="text-Aubade">
+        <p>Aubade</p>
+    </div>
 </section>
 <body>
