ajouter les portrait des poneys et chevaux

--- a/club.html
+++ b/club.html
@@ -113,5 +113,103 @@
     <div class="text-Aubade">
         <p>Aubade</p>
     </div>
+
+    <div class="imgHaribo">
+        <img src="img/Verticale/Ecume_portrait.jpg" alt="Portrait Aubade">
+
+    </div>
+    <div class="text-Haribo">
+        <p>Haribo</p>
+    </div>
+
+    <div class="imgGloria">
+        <img src="img/Verticale/Ecume_portrait.jpg" alt="Portrait Aubade">
+
+    </div>
+    <div class="text-Gloria">
+        <p>Gloria</p>
+    </div>
+
+    <div class="imgArbalete">
+        <img src="img/Verticale/Ecume_portrait.jpg" alt="Portrait Aubade">
+
+    </div>
+    <div class="text-Arbalete">
+        <p>Arbalète</p>
+    </div>
+
+    <div class="imgEliz">
+        <img src="img/Verticale/Ecume_portrait.jpg" alt="Portrait Aubade">
+
+    </div>
+    <div class="text-Eliz">
+        <p>Eliz</p>
+    </div>
+
+
+</section>
+
+<section class="preschevaux">
+
+    <div >
+        <h2>Présentation des chevaux du club</h2>
+    </div>
+
+    <div class="imgSam">
+        <img src="img/Verticale/Ecume_portrait.jpg" alt="Portrait Ecume">
+
+    </div>
+    <div class="text-Sam">
+        <p>Sam</p>
+    </div>
+
+    <div class="imgWatrichop">
+        <img src="img/Verticale/Ecume_portrait.jpg" alt="Portrait Ecume">
+
+    </div>
+    <div class="text-Watrichop">
+        <p>Watrichop</p>
+    </div>
+
+    <div class="imgBillings">
+        <img src="img/Verticale/Ecume_portrait.jpg" alt="Portrait Ecume">
+
+    </div>
+    <div class="text-Billings">
+        <p>Billings</p>
+    </div>
+
+    <div class="imgYvonne">
+        <img src="img/Verticale/Ecume_portrait.jpg" alt="Portrait Ecume">
+
+    </div>
+    <div class="text-Yvonne">
+        <p>Yvonne</p>
+    </div>
+
+    
+    <div class="imgAngie">
+        <img src="img/Verticale/Ecume_portrait.jpg" alt="Portrait Ecume">
+
+    </div>
+    <div class="text-Angie">
+        <p>Angie</p>
+    </div>
+
+    <div class="imgUtopie">
+        <img src="img/Verticale/Ecume_portrait.jpg" alt="Portrait Ecume">
+
+    </div>
+    <div class="text-Utopie">
+        <p>Utopie</p>
+    </div>
+
+    <div class="imgScooby">
+        <img src="img/Verticale/Ecume_portrait.jpg" alt="Portrait Ecume">
+
+    </div>
+    <div class="text-Scooby">
+        <p>Scooby</p>
+    </div>
 </section>
 <body>
