--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="index.css"> 
     <link rel="stylesheet" href="CSS/information.css"> 
     <link rel="stylesheet" href="CSS/club.css">
+    <link rel="stylesheet" href="CSS/footer.css">
 </head>
 <body>
     <!-- Le header -->
@@ -152,7 +153,7 @@
         </div>
         <div class="bouton">
 
-            <a href="#">
+            <a href="club.html">
                 <input class="voir-plus" type="button" value=" Voir plus "/>
             </a>
         </div>
@@ -174,6 +175,46 @@
         </div>
     </section>
 
+        <section class="footer">
+
+            <div class="accueil">
+                <a href="index.html">
+                    <p>Accueil</p>
+                </a>
+            </div>
+
+            <div class="info">
+                <a href="informations.html">
+                    <p>Information</p>
+                </a>
+            </div>
+
+            <div class="club3">
+                <a href="club.html">
+                    <p>Club</p>
+                </a>
+            </div>
+
+            <div class="mention">
+                <a href="mention.html">
+                    <p>Mention Légales</p>
+                </a>
+            </div>
+
+            <div class="Reseaux">
+                <p>Nos réseaux sociaux</p>
+            </div>
+
+            <div class="insta">
+                <a href="https://www.instagram.com/le.pas.du.marquis/"><img src="img/icon _instagram_blanc.svg" alt="Logo instagram"></a>
+            </div>
+
+            <div class="facebook">
+                <a href="https://www.facebook.com/le.pas.du.marquis/"><img src="img/icon _facebook_blanc.svg" alt="Logo facebook"></a>
+            </div>
+
+
+        </section>
 
 </body>
 
