--- a/informations.html
+++ b/informations.html
@@ -85,14 +85,14 @@
         <div class="imgicons">
             <img src="img/icon _instagram_.svg" alt="Logo instagram"/>
         </div>
-        <div>
-            <p><a href="https://www.instagram.com/le.pas.du.marquis/?hl=fr">Le Pas du Marquis</a></p>
+        <div class="lieninsta">
+            <p><a href="https://www.instagram.com/le.pas.du.marquis/">Le Pas du Marquis</a></p>
         </div>
         <!-- Facebook -->
         <div class="imgicons">
             <img src="img/icon _facebook.svg" alt="Logo Facebook"/>
         </div>
-        <div>
+        <div class="lienfacebook">
             <p><a href="https://www.facebook.com/le.pas.du.marquis/">Le Pas du Marquis</a></p>
         </div>
 
