correction lien + ajout d'une favicon

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="CSS/information.css"> 
     <link rel="stylesheet" href="CSS/club.css">
     <link rel="stylesheet" href="CSS/footer.css">
+    <link rel="icon" href="img/Logo_Pdm.ico" />
 </head>
 <body>
     <!-- Le header -->
@@ -178,32 +179,26 @@
         <section class="footer">
 
             <div class="accueil">
-                <a href="index.html">
-                    <p>Accueil</p>
-                </a>
+                <a href="index.html">Accueil</a>
+                
             </div>
 
             <div class="info">
-                <a href="informations.html">
-                    <p>Information</p>
-                </a>
+                <a href="informations.html">Informations</a>
             </div>
 
             <div class="club3">
-                <a href="club.html">
-                    <p>Club</p>
-                </a>
+                <a href="club.html">Club</a>
             </div>
 
             <div class="mention">
-                <a href="mention.html">
-                    <p>Mention Légales</p>
-                </a>
+                <a href="mention.html">Mention Légales</a>
             </div>
 
             <div class="Reseaux">
                 <p>Nos réseaux sociaux</p>
-            </div>
+
+                </div>
 
             <div class="insta">
                 <a href="https://www.instagram.com/le.pas.du.marquis/"><img src="img/icon _instagram_blanc.svg" alt="Logo instagram"></a>
