--- a/informations.html
+++ b/informations.html
@@ -86,14 +86,14 @@
             <img src="img/icon _instagram_.svg" alt="Logo instagram"/>
         </div>
         <div class="lieninsta">
-            <p><a href="https://www.instagram.com/le.pas.du.marquis/">Le Pas du Marquis</a></p>
+            <p><a href="https://www.instagram.com/le.pas.du.marquis/">Le Pas du Marquis</p></a>
         </div>
         <!-- Facebook -->
         <div class="imgicons">
             <img src="img/icon _facebook.svg" alt="Logo Facebook"/>
         </div>
         <div class="lienfacebook">
-            <p><a href="https://www.facebook.com/le.pas.du.marquis/">Le Pas du Marquis</a></p>
+            <p><a href="https://www.facebook.com/le.pas.du.marquis/">Le Pas du Marquis</p></a>
         </div>
 
         <!-- Téléphone -->
