réparation des liens d'informations

--- a/index.html
+++ b/index.html
@@ -178,35 +178,25 @@
 
         <section class="footer">
 
-            <div class="accueil">
-                <a href="index.html">Accueil</a>
+                <a class="accueilfooter" href="index.html">Accueil</a>
                 
-            </div>
 
-            <div class="info">
-                <a href="informations.html">Informations</a>
-            </div>
+                <a class="info" href="informations.html">Informations</a>
 
-            <div class="club3">
-                <a href="club.html">Club</a>
-            </div>
+                <a class="club3" href="club.html">Club</a>
 
-            <div class="mention">
-                <a href="mention.html">Mention Légales</a>
-            </div>
+                <a class="mention" href="mention.html">Mention Légales</a>
 
-            <div class="Reseaux">
-                <p>Nos réseaux sociaux</p>
 
-                </div>
 
-            <div class="insta">
-                <a href="https://www.instagram.com/le.pas.du.marquis/"><img src="img/icon _instagram_blanc.svg" alt="Logo instagram"></a>
-            </div>
+                <p class="Reseaux">Nos réseaux sociaux</p>
 
-            <div class="facebook">
-                <a href="https://www.facebook.com/le.pas.du.marquis/"><img src="img/icon _facebook_blanc.svg" alt="Logo facebook"></a>
-            </div>
+
+
+                <a class="insta" href="https://www.instagram.com/le.pas.du.marquis/"><img src="img/icon _instagram_blanc.svg" alt="Logo instagram"></a>
+
+                <a class="facebook" href="https://www.facebook.com/le.pas.du.marquis/"><img src="img/icon _facebook_blanc.svg" alt="Logo facebook"></a>
+
 
 
         </section>
