--- a/informations.html
+++ b/informations.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="index.css"> 
     <link rel="stylesheet" href="CSS/information.css"> 
     <link rel="stylesheet" href="CSS/club.css">
+    <link rel="icon" href="img/Logo_Pdm.ico" />
 </head>
 <body>
     <!-- Le header -->
