--- a/mention.html
+++ b/mention.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="CSS/club.css">
     <link rel="stylesheet" href="CSS/footer.css">
     <link rel="stylesheet" href="CSS/mention.css">
+    <link rel="icon" href="img/Logo_Pdm.ico" />
 </head>
 <body>
     <!-- Le header -->
@@ -44,7 +45,7 @@
     <section>
         <h2>Mention légales</h2>
     </section>
-    <section class="info">
+    <section class="infogenerales">
         <h3>Informations générales</h3>
         <p>Au nom de l'équipe du Pas du Marquis, 
             ce site est dédié au centre équestre le Pas du Marquis à la Teste de Buch.
@@ -86,7 +87,8 @@
     <section class="contacter">
 
         <h3>Contact</h3>
-        <p>Si vous avez des questions concernant notre politique de confidentialité ou la manière dont nous traitons vos données personnelles, veuillez nous contacter à l'adresse mail amelieperrot33@gmail.com</p>
+        <p>Si vous avez des questions concernant notre politique de confidentialité ou la manière dont nous traitons vos données personnelles, 
+            veuillez nous contacter à l'adresse mail amelieperrot33@gmail.com</p>
     </section>
 </body>
 </html>
