ajout footer page info/mention legal bug page club

--- a/club.html
+++ b/club.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="index.css"> 
     <link rel="stylesheet" href="CSS/information.css"> 
     <link rel="stylesheet" href="CSS/club.css">
+    <link rel="stylesheet" href="CSS/footer.css">
     <link rel="icon" href="img/Logo_Pdm.ico" />
 </head>
 <body>
@@ -213,4 +214,5 @@
         <p>Scooby</p>
     </div>
 </section>
+
 <body>
