changer l'image des tarifs

--- a/informations.html
+++ b/informations.html
@@ -46,7 +46,7 @@
     <section class="tarif">
         <h2>Tarifs</h2>
         <div>
-            <img src="img/Verticale/Ecume_portrait.jpg" alt="Tarifs du pas du marquis avec toute les formules"/>
+            <img src="img/Verticale/Tarif pdm ok.jpg" alt="Tarifs du pas du marquis avec toute les formules"/>
 
         </div>
 
