--- a/informations.html
+++ b/informations.html
@@ -128,7 +128,7 @@
         
             <a class="club3" href="club.html">Club</a>
 
-            <a class="mention" href="mention.html">Mention Légales</a>
+            <a class="mention" href="mention.html">Mentions Légales</a>
         
         <a class="insta" href="https://www.instagram.com/le.pas.du.marquis/"><img src="img/icon _instagram_blanc.svg" alt="Logo instagram"></a>
 
