--- a/club.html
+++ b/club.html
@@ -50,7 +50,7 @@
     <h2>Club</h2>
 
     <div class="imgbalade">
-        <img src="img/Horizontale/Ecume_concours_caresse.jpg" alt="Ecume en portrait"/>
+        <img src="img/Horizontale/baladeforet.jpg" alt="Balade dans la foret"/>
 
     </div>
 
@@ -59,14 +59,14 @@
     </div>
 
     <div class="imgstage">
-        <img src="img/Horizontale/Ecume_concours_caresse.jpg" alt="Ecume en caresse"/>
+        <img src="img/Horizontale/stage.jpg" alt="Stage d'Halloween"/>
     </div>
 
     <div class="text-stage2">
         <p> Une année de stage </p>
     </div>
     <div class="imgconcours">
-        <img src="img/Horizontale/Sam_Saut_oxer.jpg" alt="Sam en saut en oxer"/>
+        <img src="img/Horizontale/concours.jpg" alt="La team CSO en concours"/>
     </div>
 
     <div class="text-concours">
@@ -74,7 +74,7 @@
     </div>
 
     <div class="imgcours">
-        <img src="img/Horizontale/Sam_Saut_oxer.jpg" alt="Sam en saut en oxer"/>
+        <img src="img/Horizontale/cours.jpg" alt="Cours"/>
     </div>
 
     <div class="text-cours2">
@@ -101,7 +101,7 @@
     </div>
 
     <div class="imgAnecdote">
-        <img src="img/Verticale/Ecume_portrait.jpg" alt="Portrait Anecdote">
+        <img src="img/Verticale/anecdote.jpg" alt="Portrait Anecdote">
 
     </div>
     <div class="text-Anecdote">
@@ -109,7 +109,7 @@
     </div>
 
     <div class="imgAubade">
-        <img src="img/Verticale/Ecume_portrait.jpg" alt="Portrait Aubade">
+        <img src="img/Verticale/aubade.jpg" alt="Portrait Aubade">
 
     </div>
     <div class="text-Aubade">
@@ -117,7 +117,7 @@
     </div>
 
     <div class="imgHaribo">
-        <img src="img/Verticale/Ecume_portrait.jpg" alt="Portrait Aubade">
+        <img src="img/Verticale/haribo.jpg" alt="Portrait D'Haribo">
 
     </div>
     <div class="text-Haribo">
@@ -125,7 +125,7 @@
     </div>
 
     <div class="imgGloria">
-        <img src="img/Verticale/Ecume_portrait.jpg" alt="Portrait Aubade">
+        <img src="img/Verticale/gloria.jpg" alt="Portrait de Gloria">
 
     </div>
     <div class="text-Gloria">
@@ -158,7 +158,7 @@
     </div>
 
     <div class="imgSam">
-        <img src="img/Verticale/Ecume_portrait.jpg" alt="Portrait Ecume">
+        <img src="img/Verticale/sam.jpg" alt="Portrait de Sam">
 
     </div>
     <div class="text-Sam">
@@ -166,7 +166,7 @@
     </div>
 
     <div class="imgWatrichop">
-        <img src="img/Verticale/Ecume_portrait.jpg" alt="Portrait Ecume">
+        <img src="img/Verticale/watrichop.jpg" alt="Portrait de Watrichop">
 
     </div>
     <div class="text-Watrichop">
@@ -174,7 +174,7 @@
     </div>
 
     <div class="imgBillings">
-        <img src="img/Verticale/Ecume_portrait.jpg" alt="Portrait Ecume">
+        <img src="img/Verticale/billings.jpg" alt="Portrait de Billings">
 
     </div>
     <div class="text-Billings">
@@ -182,7 +182,7 @@
     </div>
 
     <div class="imgYvonne">
-        <img src="img/Verticale/Ecume_portrait.jpg" alt="Portrait Ecume">
+        <img src="img/Verticale/yvonne.jpg" alt="Portrait Ecume">
 
     </div>
     <div class="text-Yvonne">
@@ -191,7 +191,7 @@
 
     
     <div class="imgAngie">
-        <img src="img/Verticale/Ecume_portrait.jpg" alt="Portrait Ecume">
+        <img src="img/Verticale/angie.jpg" alt="Portrait Ecume">
 
     </div>
     <div class="text-Angie">
