--- a/index.html
+++ b/index.html
@@ -88,31 +88,36 @@
 
     <!-- La page de l'infrastructure du pas du marquis -->
 
-    <section class="infrastructure">
+    <section>
+        <h2>Infrastructure</h2>
 
-        <!-- Le titre de l'infrastructure -->
-        <div>
-            <h2> Infrastructure</h2>
+    </section>
+    <div class="competance">
+        <div class="competance-content">
+            <img src="img/Horizontale/club 1.jpg" alt="Image de l'entrée du club">
+            <p>Club</p>
         </div>
 
-        <div class="manège">
-            <img src="img/Horizontale/Sam_Saut_oxer.jpg" alt="Manège">
-            
-            <p>Manège</p>
-        </div>
-        <div class="carrière">
-            <img src="img/Horizontale/Sam_Saut_surverticale.jpg" alt="carrière">
+        <div class="competance-content">
+            <img src="img/Horizontale/carriere.jpg" alt="Image de la carrière">
             <p>Carrière</p>
         </div>
-        <div class="ecurie">
-            <img src="img/Horizontale/Sam_Saut_oxer.jpg" alt="écurie">
-            <p>Ecurie</p>
-        </div>
-        <div class="bureau">
-            <img src="img/Horizontale/Sam_Saut_surverticale.jpg" alt="bureau">
-            <p>Bureau</p>
-        </div>
+    </div>
+    </section>
 
+</section>
+<div class="competance">
+    <div class="competance-content">
+        <img src="img/Horizontale/manege 1.jpg" alt="Image du manège">
+        <p>Manège</p>
+    </div>
+
+    <div class="competance-content">
+        <img src="img/Horizontale/box.jpg" alt="Image des box">
+        <p>Box</p>
+    </div>
+</div>
+</section>
 
 
 <!-- Section du club  -->
