--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
         <h2>Infrastructure</h2>
 
     </section>
-    <div class="competance">
-        <div class="competance-content">
+    <div class="infrastructure">
+        <div class="infrastructure-content">
             <img src="img/Horizontale/club 1.jpg" alt="Image de l'entrée du club">
             <p>Club</p>
         </div>
 
-        <div class="competance-content">
+        <div class="infrastructure-content">
             <img src="img/Horizontale/carriere.jpg" alt="Image de la carrière">
             <p>Carrière</p>
         </div>
@@ -106,13 +106,13 @@
     </section>
 
 </section>
-<div class="competance">
-    <div class="competance-content">
+<div class="infrastructure">
+    <div class="infrastructure-content">
         <img src="img/Horizontale/manege 1.jpg" alt="Image du manège">
         <p>Manège</p>
     </div>
 
-    <div class="competance-content">
+    <div class="infrastructure-content">
         <img src="img/Horizontale/box.jpg" alt="Image des box">
         <p>Box</p>
     </div>
