modification home beug + photo

--- a/index.html
+++ b/index.html
@@ -41,27 +41,42 @@
         </nav>
     </header>
 
-    <!-- Section page d'accueil  -->
-    <section class="accueil">
 
-        <!-- Les 3 images de la couverture du haut -->
-        <div class="Image_accueil1">
-            <img class="couverture1" src="img/Horizontale/Sam_Saut_surverticale.jpg" alt="Sam en saut sur un vertical avec Amélie dessus dans la carrière en herbe"/>
-            <img class="couverture2" src="img/Horizontale/Ecume_concours_caresse.jpg" alt="Ecume en concours à Marcheprime avec Amélie dessus entrain de le caresser"/>
-            <img class="couverture3" src="img/Horizontale/Sam_Saut_oxer.jpg" alt="Sam en saut sur un oxer avec Amélie dessus dans la carrière en herbe"/>
-        </div>
+</section>
+<section class="accueil-couverture"> 
+<div class="accueil">
+    <div class="accueil-content">
+        <img src="img/Horizontale/accueil/balade_ocean.jpg" alt="Image de l'entrée du club">
+    </div>
+
+    <div class="accueil-content">
+        <img src="img/Horizontale/accueil/photo_groupe.jpg" alt="Image de la carrière">
+    </div>
+    <div class="accueil-content">
+        <img src="img/Horizontale/accueil/balade_rivière.jpg" alt="Image de la carrière">
+    </div>
+</div>
+
+
 <!-- Le titre du site  -->
+    
         <div class="titre">
             <h1 class="titre">Bienvenue au Pas du Marquis !</h1>
         </div>
-        <!-- Les 3 images de la couverture duu bas -->
-        <div class="Image_accueil2">
-            <img class="couverture4" src="img/Horizontale/Sam_dressage.jpg" alt="Sam en dressage avec Amélie dessus "/>
-            <img class="couverture5"src="img/Horizontale/Ecume_plat.jpg" alt="Ecume en plat avec Amélie dessus dans la grande carrière en sable"/>
-            <img class="couverture6"src="img/Horizontale/Ecume_shooting_moi.jpg" alt="Ecume en mode beau gosse avec Amélie dessus dans la carrière en herbe"/>
+        <div class="accueil">
+            <div class="accueil-content">
+                <img src="img/Horizontale/accueil/cours_jeu.jpg" alt="Image de l'entrée du club">
+            </div>
+        
+            <div class="accueil-content">
+                <img src="img/Horizontale/accueil/baladelac.jpg" alt="Image de la carrière">
+            </div>
+            <div class="accueil-content">
+                <img src="img/Horizontale/accueil/remise_prix.jpg" alt="Image de la carrière">
+            </div>
         </div>
+        </section>
 
-    </section>
         <!-- Section présentation du club -->
     <section class="présentation">
 
