ajout poney photo

--- a/club.html
+++ b/club.html
@@ -123,7 +123,7 @@
 </section>
 <div class="poney">
     <div class="poney-content">
-        <img src="img/Verticale/aubade.jpg" alt="Image de l'entrée du club">
+        <img src="img/Verticale/poney/aubade.jpg" alt="Image de l'entrée du club">
         <p>Aubade</p>
     </div>
 
@@ -132,7 +132,7 @@
         <p>Haribo</p>
     </div>
     <div class="poney-content">
-        <img src="img/Verticale/aubade.jpg" alt="Image de la carrière">
+        <img src="img/Verticale/poney/aubade.jpg" alt="Image de la carrière">
         <p>Arbalète</p>
     </div>
 </div>
@@ -144,17 +144,17 @@
 </section>
 <div class="poney">
     <div class="poney-content">
-        <img src="img/Verticale/aubade.jpg" alt="Image de l'entrée du club">
+        <img src="img/Verticale/poney/eliz.jpg" alt="Image de l'entrée du club">
         <p>Eliz</p>
     </div>
 
     <div class="poney-content">
-        <img src="img/Verticale/anecdote.jpg" alt="Image de la carrière">
-        <p>Anecdote</p>
+        <img src="img/Verticale/poney/Ecume.jpg" alt="Image de la carrière">
+        <p>Girly</p>
     </div>
     <div class="poney-content">
-        <img src="img/Verticale/gloria.jpg" alt="Image de la carrière">
-        <p>Gloria</p>
+        <img src="img/Verticale/poney/Ecume.jpg" alt="Image de la carrière">
+        <p>Beautiful</p>
     </div>
 </div>
 </section>
@@ -172,16 +172,16 @@
     </div>
 <div class="chevaux">
     <div class="chevaux-content">
-        <img src="img/Verticale/sam.jpg" alt="Image de l'entrée du club">
+        <img src="img/Verticale/chevaux/sam.jpg" alt="Image de l'entrée du club">
         <p>Sam</p>
     </div>
 
     <div class="chevaux-content">
-        <img src="img/Verticale/billings.jpg" alt="Image de la carrière">
+        <img src="img/Verticale/chevaux/billings.jpg" alt="Image de la carrière">
         <p>Billings</p>
     </div>
     <div class="chevaux-content">
-        <img src="img/Verticale/watrichop.jpg" alt="Image de la carrière">
+        <img src="img/Verticale/chevaux/watrichop.jpg" alt="Image de la carrière">
         <p>Watrichop</p>
     </div>
 </div>
@@ -190,12 +190,12 @@
 </section>
 <div class="chevaux">
     <div class="chevaux-content">
-        <img src="img/Verticale/yvonne.jpg" alt="Image de l'entrée du club">
+        <img src="img/Verticale/chevaux/yvonne.jpg" alt="Image de l'entrée du club">
         <p>Yvonne</p>
     </div>
 
     <div class="chevaux-content">
-        <img src="img/Verticale/angie.jpg" alt="Image de la carrière">
+        <img src="img/Verticale/chevaux/angie.jpg" alt="Image de la carrière">
         <p>Angie</p>
     </div>
     <div class="chevaux-content">
@@ -208,16 +208,16 @@
 </section>
 <div class="chevaux">
     <div class="chevaux-content">
-        <img src="img/Verticale/aubade.jpg" alt="Image de l'entrée du club">
+        <img src="img/Verticale/chevaux/billings.jpg" alt="Image de l'entrée du club">
         <p>Scooby</p>
     </div>
 
     <div class="chevaux-content">
-        <img src="img/Verticale/anecdote.jpg" alt="Image de la carrière">
+        <img src="img/Verticale/chevaux/sam.jpg" alt="Image de la carrière">
         <p>Anecdote</p>
     </div>
     <div class="chevaux-content">
-        <img src="img/Verticale/gloria.jpg" alt="Image de la carrière">
+        <img src="img/Verticale/chevaux/watrichop.jpg" alt="Image de la carrière">
         <p>Gloria</p>
     </div>
 </div>
